--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -30,7 +30,7 @@
 \familyname{Costas}
 \title{Curriculum Vitae, updated \today}
 \address{Trondheim, Norway} % dato opcional, elimine la linea si no desea el dato
-\mobile{(+47)~469~67~251\\(+34)~660~784~672\\}
+\mobile{(+47)~469~67~251\\}
 \email{miguel.costas@ntnu.no}                                 % dato opcional, elimine la linea si no desea el dato
 \extrainfo{Birth date: 11.28.1987}                    % dato opcional, elimine la linea si no desea el dato
 \photo[64pt][0pt]{foto_yo_redondo}                          % '64pt' es la altura a la que la imagen debe ser ajustada, 0.4pt es grosor del marco que lo contiene (eliga 0pt para eliminar el marco) y 'picture' es el nombre del archivo; dato opcional, elimine la linea si no desea el dato
@@ -63,20 +63,12 @@
 \cventry{2016}{\emph{Cum laude} PhD.}{University of A Coru\~na}{}{}{Awarded to PhD. theses with outstanding contributions, agreed by the committee by secret individual votes.} 
 
 \section{Work history}
-\cventry{2021--Present}{Associate professor}{Department of Structural Engineering, NTNU (Trondheim, Norway)}{}{}{}
+\cventry{2021--Present}{Associate Professor}{Department of Structural Engineering, NTNU (Trondheim, Norway)}{}{}{}
 \cventry{2019--2021}{Researcher}{Centre for Advanced Structural Analysis (CASA), NTNU (Trondheim, Norway)}{}{}{}
 \cventry{2017--2019}{Postdoctoral researcher}{Centre for Advanced Structural Analysis (CASA), NTNU (Trondheim, Norway)}{}{}{}
 \cventry{2016}{Postdoctoral researcher}{Structural Mechanics group, University of A Coru\~na}{}{}{}
 \cventry{2011--2015}{RD engineer and PhD candidate}{Structural Mechanics group, University of A Coru\~na}{}{}{}
 \cventry{Summer 2009}{Internship}{Port Authority of Vilagarc\'ia de Arousa (Puertos del Estado)}{}{}{}
-
-\section{Teaching experience}
-\cventry{2019--Present}{Teacher and coordinator of ``Materials Mechanics'' (TKT4135), master programmes}{NTNU}{}{}{}
-\cventry{2015--2018}{Teacher of ``Advanced structural analysis'' in the Master in Structural and Material Aerospace Engineering}{School of Civil Engineering, UDC}{}{}{}
-\cventry{2013--2014}{Assistant in the practical training of the subject ``Bridges 1''}{School of Civil Engineering, UDC}{}{}{}
-
-\section{Supervision of PhD. theses}
-\cventry{2019-2023}{``Behaviour and modelling of multi-layered joints"}{PhD. candidate Victor Andr\'e, NTNU}{}{}{}
 
 \section{Languages}
 \cvitemwithcomment{Spanish}{Native}{}
@@ -86,17 +78,29 @@
 \cvitemwithcomment{French}{Basic professional proficiency, level B1}{}
 \cvitemwithcomment{Portuguese}{Basic professional proficiency}{}
 
-\pagebreak
 \section{Computation skills}
 \cvitem{FEM}{Abaqus Standard and Explicit including user material subroutines, LS-DYNA, Ansys, SAP2000, Cosmos/M.}
 \cvitem{Optimization}{Experience in structural optimization: DAKOTA and LS-OPT.}
 \cvitem{CAD}{Autocad, Solidworks.}
 \cvitem{Programming}{Python, Fortran, Bash, \LaTeX.}
+\pagebreak
+
+\section{Teaching experience}
+\cventry{2019--Present}{Teacher and coordinator of ``Materials Mechanics'' (TKT4135), master programmes}{NTNU}{}{}{}
+\cventry{2015--2018}{Teacher of ``Advanced structural analysis'' in the Master in Structural and Material Aerospace Engineering}{School of Civil Engineering, UDC}{}{}{}
+\cventry{2013--2014}{Assistant in the practical training of the subject ``Bridges 1''}{School of Civil Engineering, UDC}{}{}{}
+
+\section{Supervision of PhD. theses}
+\cventry{2019-2023}{``Behaviour and modelling of multi-layered joints"}{PhD. candidate Victor Andr\'e, NTNU}{}{}{}
+\cventry{2022-2025}{``Behaviour and modelling of pinned joints in steel structures subjected to dynamic loading"}{PhD candidate Debora Obkircher, NTNU}{}{}{}
+\cventry{2022-2025}{``Mechanical testing and numerical modelling of Li-ion automotive batteries subjected to impact loading"}{PhD. candidate Daniele Cioni, NTNU}{}{}{}
 
 \renewcommand{\listitemsymbol}{-~}            % para cambiar el simbolo para las listas
 
 
 % Las publicaciones tomadas de un archivo de BibTeX sin usar multibib\renewcommand*{\bibliographyitemlabel}{\@biblabel{\arabic{enumiv}}}
+\section{Patents}
+\cvlistitem{National Spanish patent no. ES 2-386-269-B1: Hybrid metal-composite system for crash energy absorption. Authors: Alberto Tielas, Isabel \'Alvarez, Raquel Ledo (Centro Tecnol\'oxico da Automoci\'on de Galicia, CTAG); Miguel Costas, Luis Esteban Romera (University of A Coru\~na, UDC). Granted on the 11th of July 2013.}
 
 \section{Projects and activities in collaboration with industry}
 \cvitem{UDC}{Collaborations from 2011 to 2016:}
@@ -135,10 +139,9 @@
 \vspace{2mm}
 \cvlistitem{[\textbf{Hydro} and \textbf{Benteler}] IPN project EXPECT. Years 2021-2024.}
 \vspace{2mm}
+\cvlistitem{[\textbf{Audi AG}] Testing and modelling of prismatic Li-ion automotive batteries. Years 2023-2025.}
 \cvlistitem{[\textbf{Hydro Extruded Solutions}, \textbf{Toyota Motor Europe}, \textbf{Audi}, \textbf{BMW}, \textbf{Honda}, \textbf{Airbus}, \textbf{Renault}] Calibrations, workshops, seminars and stays related to the industrial implementation of the through-thickness damage regularisation model.}
-\pagebreak
-\section{Patents in collaboration with industry}
-\cvlistitem{National Spanish patent no. ES 2-386-269-B1: Hybrid metal-composite system for crash energy absorption. Authors: Alberto Tielas, Isabel \'Alvarez, Raquel Ledo (Centro Tecnol\'oxico da Automoci\'on de Galicia, CTAG); Miguel Costas, Luis Esteban Romera (University of A Coru\~na, UDC). Granted on the 11th of July 2013.}
+
 
 \section{Other RD projects}
 \cvlistitem{[National project] DPI 2013-41893-R. OPTOPAER. Probabilistic topologic and topometric optimization of aeronautical structures in linear and nonlinear regimes. Spanish Ministry of Economy and Competitiveness. Years 2014-2016. Budget: 53240 \texteuro.}
@@ -160,11 +163,12 @@
 %\bibliographymisc{publications}              % 'publications' es el nombre del archivo BibTeX
 
 %\clearpage\end{CJK*}                          % si esta redactando su CV en chino usando CJK, \clearpage es requerido por fancyhdr para que funcione correctamente con CJK, aunque esto eliminara la numeracion de pagina al dejar \lastpage como no definido
+\pagebreak
 \section{International research stays}
 \cvlistitem{Research stay from 1/10/2014 to 1/4/2015 (six months) at the Structural Impact Laboratory (NTNU, Norway) supervised by Prof. Magnus Langseth and Dr. David Morin.}
 
 \section{Scientific advisory}
-\cvlistitem{Collaboration in international conferences: Chairman in ECCOMAS 2022, member of the organizing committee in ICILSM 2022.}
+\cvlistitem{Chairman in ECCOMAS 2022, member of the organizing committee in ICILSM 2022.}
 \cvlistitem{Reviewer in JCR journals \emph{Journal of the Mechanics and Physics of Solids}, \emph{Engineering Fracture Mechanics}, \emph{European Journal of Mechanics A/Solids}, \emph{International Journal of Impact Engineering}, \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites}, \emph{Engineering Optimization}, \emph{Computers and Structures}, \emph{Composites Part B}, \emph{Journal of Aerospace Engineering}, and \emph{Thin-Walled Structures}.}
 \cvlistitem{External advisor, Group of Structural Mechanics, University of A Coruña.}
 \cvlistitem{Opponent in PhD thesis committees at: The University of Edinburgh (2019). }
