--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -5,6 +5,15 @@
         journal={},
 }
 
+@article{victor1,
+title = "{Neural network modelling of mechanical joints for the application in large-scale crash analyses}",
+journal = "International Journal of Impact Engineering",
+volume = {177},
+pages = {104490},
+year = "2023",
+author = "V. Andr\'e and M. Costas and M. Langseth and D. Morin",
+}
+
 @article{maisie,
 title = "{Ballistic impact resistance of additive manufactured high-strength maraging steel: an experimental study}",
 journal = "International Journal of Protective Structures",
@@ -187,6 +196,49 @@ isbn="978-3-662-53605-6",
         journal={},
 
 }
+
+@conference{icilsm22_1,
+  Author = {Børvik, T. and Costas, M and Edwards-Mowforth, M. and Kristoffersen, M.},
+  Booktitle = {ICILSM 2022, Trondheim (Norway)},
+  Document_Type = {Conference Paper},
+  Title = {Additively Manufactured Protective Structures},
+  Year = {2022},
+  }
+@conference{icilsm22_2,
+  Author = {Del Cuvillo, R. and Costas, M. and Aune, V. and Børvik, T. and Artero-Guerrero, J. and Pernas-Sánchez, J. and Puente, J.},
+  Booktitle = {ICILSM 2022, Trondheim (Norway)},
+  Document_Type = {Conference Paper},
+  Title = {Carbon fibre composite exposed to blast loading: A preliminary study.},
+  Year = {2022},
+  }
+@conference{icilsm22_3,
+  Author = {Edwards-Mowforth, M. and Thompson, S. and Costas, M. and Kristoffersen, M. and Børvik, T. and Teixeira-Días, F.},
+  Booktitle = {ICILSM 2022, Trondheim (Norway)},
+  Document_Type = {Conference Paper},
+  Title = {A numerical modelling and generative deep learning approach to the ballistic impact resistance of additive manufactured maraging steel plates.},
+  Year = {2022},
+  }
+@conference{lwag,
+  Author = {Edwards-Mowforth, M. and Thompson, S. and Costas, M. and Kristoffersen, M. and Børvik, T. and Teixeira-Dias, F.},
+  Booktitle = {Light-Weight Armour for Defence \& Security LWAG 2022, Fraunhofer (Germany)},
+  Document_Type = {Conference Paper},
+  Title = {A numerical modelling and deep learning approach to the ballistic impact resistance of additive manufactured maraging steel.},
+  Year = {2022},
+  }
+@conference{nordic,
+  Author = {Morin, D. and Costas, M. and Langseth, M.},
+  Booktitle = {Nordic LS-DYNA users' conference 2022, Gothenburg (Sweden)},
+  Document_Type = {Conference Paper},
+  Title = {Modelling of fracture in aluminium extrusions in large scale analyses.},
+  Year = {2021},
+  }
+@conference{eccomas,
+  Author = {Obkircher, D. and Costas, M. and Børvik, T. and Hopperstad, O.S.},
+  Booktitle = {ECCOMAS Congress 2022, Oslo (Norway)},
+  Document_Type = {Conference Paper},
+  Title = {Shape and size optimization of a complex extruded aluminium profile for protection of battery trays in electric vehicles.},
+  Year = {2022},
+  }
 @conference{lsdyna21,
   Author = {Andr\'e, V. and Morin, D. and Costas, M. and Langseth, M.},
   Booktitle = {13th LS-DYNA European Conference, Ulm (Germany)},
