--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -64,6 +64,7 @@
 
 \section{Work history}
 \cventry{2021--Present}{Associate Professor}{Department of Structural Engineering, NTNU (Trondheim, Norway)}{}{}{}
+\cventry{2021--Present}{Principal engineer}{Enodo AS (Trondheim, Norway)}{}{}{}
 \cventry{2019--2021}{Researcher}{Centre for Advanced Structural Analysis (CASA), NTNU (Trondheim, Norway)}{}{}{}
 \cventry{2017--2019}{Postdoctoral researcher}{Centre for Advanced Structural Analysis (CASA), NTNU (Trondheim, Norway)}{}{}{}
 \cventry{2016}{Postdoctoral researcher}{Structural Mechanics group, University of A Coru\~na}{}{}{}
