--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -65,6 +65,7 @@
 \section{Work history}
 \cventry{2021--Present}{Associate Professor}{Department of Structural Engineering, NTNU (Trondheim, Norway)}{}{}{}
 \cventry{2021--Present}{Principal engineer}{Enodo AS (Trondheim, Norway)}{}{}{}
+\cventry{2018--Present}{Piano teacher and accompanist}{Trondheim Kommunale Kulturskole and NTNU (Trondheim, Norway)}{}{}{}
 \cventry{2019--2021}{Researcher}{Centre for Advanced Structural Analysis (CASA), NTNU (Trondheim, Norway)}{}{}{}
 \cventry{2017--2019}{Postdoctoral researcher}{Centre for Advanced Structural Analysis (CASA), NTNU (Trondheim, Norway)}{}{}{}
 \cventry{2016}{Postdoctoral researcher}{Structural Mechanics group, University of A Coru\~na}{}{}{}
@@ -87,6 +88,7 @@
 \pagebreak
 
 \section{Teaching experience}
+\cventry{2024--Present}{Teacher and coordinator of ``EiT: Smart structural design with aluminium'' (TKT4857), master programmes}{NTNU}{}{}{}
 \cventry{2019--Present}{Teacher and coordinator of ``Materials Mechanics'' (TKT4135), master programmes}{NTNU}{}{}{}
 \cventry{2015--2018}{Teacher of ``Advanced structural analysis'' in the Master in Structural and Material Aerospace Engineering}{School of Civil Engineering, UDC}{}{}{}
 \cventry{2013--2014}{Assistant in the practical training of the subject ``Bridges 1''}{School of Civil Engineering, UDC}{}{}{}
@@ -94,7 +96,11 @@
 \section{Supervision of PhD. theses}
 \cventry{2019-2023}{``Behaviour and modelling of multi-layered joints"}{PhD. candidate Victor Andr\'e, NTNU}{}{}{}
 \cventry{2022-2025}{``Behaviour and modelling of pinned joints in steel structures subjected to dynamic loading"}{PhD candidate Debora Obkircher, NTNU}{}{}{}
+\cventry{2022-2025}{``Terminal ballistic effects of additively manufactured maraging steel"}{PhD candidate Maisie Edwards-Mowforth, The University of Edinburgh}{}{}{}
+\cventry{2022-2025}{``Robust design of crash-relevant structures"}{PhD. candidate Andries Matthijs Oudes, NTNU}{}{}{}
 \cventry{2022-2025}{``Mechanical testing and numerical modelling of Li-ion automotive batteries subjected to impact loading"}{PhD. candidate Daniele Cioni, NTNU}{}{}{}
+\cventry{2023-2026}{``Testing and simulation of thick-walled aluminium profiles under severe mechanical loadings"}{PhD. candidate Eduard Teixid\'o, NTNU}{}{}{}
+
 
 \renewcommand{\listitemsymbol}{-~}            % para cambiar el simbolo para las listas
 
@@ -140,9 +146,10 @@
 \vspace{2mm}
 \cvlistitem{[\textbf{Hydro} and \textbf{Benteler}] IPN project EXPECT. Years 2021-2024.}
 \vspace{2mm}
-\cvlistitem{[\textbf{Audi AG}] Testing and modelling of prismatic Li-ion automotive batteries. Years 2023-2025.}
 \cvlistitem{[\textbf{Hydro Extruded Solutions}, \textbf{Toyota Motor Europe}, \textbf{Audi}, \textbf{BMW}, \textbf{Honda}, \textbf{Airbus}, \textbf{Renault}] Calibrations, workshops, seminars and stays related to the industrial implementation of the through-thickness damage regularisation model.}
-
+\cvlistitem{[\textbf{Audi AG}] Testing and modelling of prismatic Li-ion automotive batteries. Years 2023-2025.}
+\cvlistitem{[\textbf{Hydro Extruded Solutions}] Towards an AI-driven calibration of constitutive models for aluminium alloys in an industrial context. Years 2024-2028.}
+\cvlistitem{[\textbf{Hydro Extruded Solutions}] Material and component experimental testing of thick-walled profiles for side crash protection. Years 2024-2028.}
 
 \section{Other RD projects}
 \cvlistitem{[National project] DPI 2013-41893-R. OPTOPAER. Probabilistic topologic and topometric optimization of aeronautical structures in linear and nonlinear regimes. Spanish Ministry of Economy and Competitiveness. Years 2014-2016. Budget: 53240 \texteuro.}
@@ -164,7 +171,6 @@
 %\bibliographymisc{publications}              % 'publications' es el nombre del archivo BibTeX
 
 %\clearpage\end{CJK*}                          % si esta redactando su CV en chino usando CJK, \clearpage es requerido por fancyhdr para que funcione correctamente con CJK, aunque esto eliminara la numeracion de pagina al dejar \lastpage como no definido
-\pagebreak
 \section{International research stays}
 \cvlistitem{Research stay from 1/10/2014 to 1/4/2015 (six months) at the Structural Impact Laboratory (NTNU, Norway) supervised by Prof. Magnus Langseth and Dr. David Morin.}
 
