--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -5,6 +5,15 @@
         journal={},
 }
 
+@article{victor2,
+title = "{Behavior and large-scale modeling of multi-sheet aluminum connections with self-piercing rivets}",
+journal = "Journal of Manufacturing Science and Engineering",
+volume = {145},
+pages = {101010},
+year = "2023",
+author = "V. Andr\'e and M. Costas and M. Langseth and D. Morin",
+}
+
 @article{victor1,
 title = "{Neural network modelling of mechanical joints for the application in large-scale crash analyses}",
 journal = "International Journal of Impact Engineering",
@@ -27,7 +36,7 @@ journal = {Journal of Materials Processing Technology},
 volume = {294},
 pages = {117133},
 year = {2021},
-author = {Miguel Costas and David Morin and Johan Kolstø Sønstabø and Magnus Langseth},
+author = {Costas, M and Morin, D. and Sønstabø, JK. and Langseth, M.},
 }
 
 @article{JOHANNESSEN2021106673,
@@ -36,7 +45,7 @@ journal = {Journal of Constructional Steel Research},
 volume = {182},
 pages = {106673},
 year = {2021},
-author = {Håkon Johannessen and Oddvar Hestetræet Johannessen and Miguel Costas and Arild Holm Clausen and Johan Kolstø Sønstabø},
+author = {Johannessen, J. and Johannessen, OH. and Costas, M. and Clausen, AH. and Sønstabø, JK.},
 }
 
 @Article{app10238510,
@@ -196,6 +205,30 @@ isbn="978-3-662-53605-6",
         journal={},
 
 }
+
+@conference{maisie1,
+  Author = {Edwards-Mowforth, M. and Costas, M. and Kristoffersen, M. and Teixeira-Dias, F. and Børvik, T.},
+  Booktitle = {BSSM 17th International Conference on Advances in Experimental Mechanics, Glasgow (UK)},
+  Document_Type = {Conference Paper},
+  Title = {On the ballistic impact resistance of additive manufactured maraging steel targets compared to that of cast targets},
+  Year = {2023},
+  }
+
+@conference{maisie2,
+  Author = {Edwards-Mowforth, M. and Costas, M. and Kristoffersen, M. and Teixeira-Dias, F. and Børvik, T.},
+  Booktitle = {Additively Manufactured Ballistic Protection, FFI AMMA2023 - Additive Manufacturing for Military Applications, Oslo (Norway)},
+  Document_Type = {Conference Paper},
+  Title = {On the ballistic impact resistance of additive manufactured maraging steel targets compared to that of cast targets},
+  Year = {2023},
+  }
+
+@conference{maisie3,
+  Author = {Edwards-Mowforth, M. and Costas, M. and Kristoffersen, M. and Teixeira-Dias, F. and Børvik, T.},
+  Booktitle = {33rd International Symposium on Ballistics - ISB 2023, Bruges (Belgium)},
+  Document_Type = {Conference Paper},
+  Title = {On the ballistic impact resistance of additive manufactured maraging steel targets compared to that of cast targets},
+  Year = {2023},
+  }
 
 @conference{icilsm22_1,
   Author = {Børvik, T. and Costas, M and Edwards-Mowforth, M. and Kristoffersen, M.},
