--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -64,8 +64,9 @@
 
 \section{Work history}
 \cventry{2021--Present}{Associate Professor}{Department of Structural Engineering, NTNU (Trondheim, Norway)}{}{}{}
-\cventry{2021--Present}{Principal engineer}{Enodo AS (Trondheim, Norway)}{}{}{}
-\cventry{2018--Present}{Piano teacher and accompanist}{Trondheim Kommunale Kulturskole and NTNU (Trondheim, Norway)}{}{}{}
+\cventry{2020--Present}{Principal Engineer}{Enodo AS (Trondheim, Norway)}{}{}{}
+\cventry{2018--Present}{Piano teacher and accompanist}{Trondheim Kommunale Kulturskole (Trondheim, Norway)}{}{}{}
+\cventry{--}{}{}{}{}{}
 \cventry{2019--2021}{Researcher}{Centre for Advanced Structural Analysis (CASA), NTNU (Trondheim, Norway)}{}{}{}
 \cventry{2017--2019}{Postdoctoral researcher}{Centre for Advanced Structural Analysis (CASA), NTNU (Trondheim, Norway)}{}{}{}
 \cventry{2016}{Postdoctoral researcher}{Structural Mechanics group, University of A Coru\~na}{}{}{}
@@ -76,7 +77,7 @@
 \cvitemwithcomment{Spanish}{Native}{}
 \cvitemwithcomment{Galician}{Native}{}
 \cvitemwithcomment{English}{Full professional proficiency}{Certificate in Advanced English, Cambridge University. 2012.}
-\cvitemwithcomment{Norwegian}{Intermediate professional proficiency, level B2}{}
+\cvitemwithcomment{Norwegian}{Intermediate professional proficiency, level B2/C1}{}
 \cvitemwithcomment{French}{Basic professional proficiency, level B1}{}
 \cvitemwithcomment{Portuguese}{Basic professional proficiency}{}
 
@@ -88,19 +89,19 @@
 \pagebreak
 
 \section{Teaching experience}
-\cventry{2024--Present}{Teacher and coordinator of ``EiT: Smart structural design with aluminium'' (TKT4857), master programmes}{NTNU}{}{}{}
+\cventry{2024--Present}{Teacher and coordinator of ``EiT: Smart Structural Design with Aluminium'' (TKT4857), master programmes}{NTNU}{}{}{}
 \cventry{2019--Present}{Teacher and coordinator of ``Materials Mechanics'' (TKT4135), master programmes}{NTNU}{}{}{}
+\cventry{2019--Present}{Guest lecturer in  ``Impact Mechanics'' (TKT4128) and "Numerical Methods" (TKT4140), master programmes}{NTNU}{}{}{}
 \cventry{2015--2018}{Teacher of ``Advanced structural analysis'' in the Master in Structural and Material Aerospace Engineering}{School of Civil Engineering, UDC}{}{}{}
 \cventry{2013--2014}{Assistant in the practical training of the subject ``Bridges 1''}{School of Civil Engineering, UDC}{}{}{}
 
 \section{Supervision of PhD. theses}
-\cventry{2019-2023}{``Behaviour and modelling of multi-layered joints"}{PhD. candidate Victor Andr\'e, NTNU}{}{}{}
-\cventry{2022-2025}{``Behaviour and modelling of pinned joints in steel structures subjected to dynamic loading"}{PhD candidate Debora Obkircher, NTNU}{}{}{}
-\cventry{2022-2025}{``Terminal ballistic effects of additively manufactured maraging steel"}{PhD candidate Maisie Edwards-Mowforth, The University of Edinburgh}{}{}{}
-\cventry{2022-2025}{``Robust design of crash-relevant structures"}{PhD. candidate Andries Matthijs Oudes, NTNU}{}{}{}
+\cventry{2023-2026}{``Testing and simulation of thick-walled aluminium profiles under severe mechanical loadings"}{PhD candidate Eduard Teixidó Marquès, NTNU}{}{}{}
+\cventry{2023-2026}{``Digital certification for crash simulation of vehicles"}{PhD candidate Andries Matthijs Oudes, NTNU}{}{}{}
+\cventry{2022-2026}{``Behaviour and modelling of pinned joints in steel structures subjected to dynamic loading"}{PhD candidate Debora Obkircher, NTNU}{}{}{}
 \cventry{2022-2025}{``Mechanical testing and numerical modelling of Li-ion automotive batteries subjected to impact loading"}{PhD. candidate Daniele Cioni, NTNU}{}{}{}
-\cventry{2023-2026}{``Testing and simulation of thick-walled aluminium profiles under severe mechanical loadings"}{PhD. candidate Eduard Teixid\'o, NTNU}{}{}{}
-
+\cventry{2021-2024}{`Terminal ballistic effects of additively manufactured maraging steel''}{PhD. candidate Maisie Edwards--Mowforth, The University of Edinburgh}{}{}{}
+\cventry{2019-2023}{``Behaviour and modelling of multi-layered joints"}{PhD. candidate Victor Andr\'e, NTNU}{}{}{}
 
 \renewcommand{\listitemsymbol}{-~}            % para cambiar el simbolo para las listas
 
@@ -126,6 +127,7 @@
 \cvlistitem{[\textbf{Airbus}] Optimization study of rear fuselage. Year 2015. Budget: 25561.26 \texteuro.}
 \vspace{2mm}
 \cvlistitem{[\textbf{Airbus}] Junction modeling of nonlinear frequency response of assembled structures. Extension of 2012 activities. Year 2015. Budget: 24200 \texteuro.}
+\pagebreak
 \vspace{4mm}
 \cvitem{NTNU}{Collaborations from 2017 to present:}
 \cvlistitem{[\textbf{Hydro Extruded Solutions}] Study of fibrous and recrystallised AA6005-T6 for the development of a through-thickness ductile damage regularisation model for shells. Years 2017-2018.}
@@ -146,16 +148,22 @@
 \vspace{2mm}
 \cvlistitem{[\textbf{Hydro} and \textbf{Benteler}] IPN project EXPECT. Years 2021-2024.}
 \vspace{2mm}
-\cvlistitem{[\textbf{Hydro Extruded Solutions}, \textbf{Toyota Motor Europe}, \textbf{Audi}, \textbf{BMW}, \textbf{Honda}, \textbf{Airbus}, \textbf{Renault}] Calibrations, workshops, seminars and stays related to the industrial implementation of the through-thickness damage regularisation model.}
 \cvlistitem{[\textbf{Audi AG}] Testing and modelling of prismatic Li-ion automotive batteries. Years 2023-2025.}
+\cvlistitem{[\textbf{Audi AG}] Digital certification for crash simulation of vehicles. Years 2023-2025.}
+\cvlistitem{[\textbf{Renault}] Modelling of multi-layered joints. Year 2024.}
 \cvlistitem{[\textbf{Hydro Extruded Solutions}] Towards an AI-driven calibration of constitutive models for aluminium alloys in an industrial context. Years 2024-2028.}
 \cvlistitem{[\textbf{Hydro Extruded Solutions}] Material and component experimental testing of thick-walled profiles for side crash protection. Years 2024-2028.}
+
 
 \section{Other RD projects}
 \cvlistitem{[National project] DPI 2013-41893-R. OPTOPAER. Probabilistic topologic and topometric optimization of aeronautical structures in linear and nonlinear regimes. Spanish Ministry of Economy and Competitiveness. Years 2014-2016. Budget: 53240 \texteuro.}
 \cvlistitem{[Regional project] GRC2013-056. Group of Competitive Reference. Regional Counseling of Culture, Education and Universities. Years 2013-2016. Budget: 259000 \texteuro.}
 
 \section{RD fundraising -- awarded projects}
+\cvlistitem{[Collaboration project] Towards an AI-driven calibration of constitutive models for aluminium alloys in an industrial context. Hydro Extruded Solutions. Years 2024-2028.}
+\cvlistitem{[Collaboration project] Material and component experimental testing of thick-walled profiles for side crash protection. Hydro Extruded Solutions. Years 2024-2028.}
+\cvlistitem{[Comissioned research] Project with Audi AG, protected by NDA. Year 2025.}
+\cvlistitem{[Comissioned research] Project with Audi AG, protected by NDA. Years 2023-2026.}
 \cvlistitem{[National project] PID2019-108307RB-I00. OPTIFUSE. Reliability-based crashworthiness and damage tolerant optimization of new generation fuselage structures. Spanish Ministry of Science and Innovation. Year 2020. Budget: 154000 \texteuro  + PhD contract.}
 \cvlistitem{[National project] DPI2016-76934-R. OPTISAFE. Probabilistic optimization of intact and damaged aeronautical structures under dynamic and impact loading. Spanish Ministry of Economy and Competitiveness. Year 2016. Budget: 111600 \texteuro.}
 \nocite{*}
@@ -171,6 +179,7 @@
 %\bibliographymisc{publications}              % 'publications' es el nombre del archivo BibTeX
 
 %\clearpage\end{CJK*}                          % si esta redactando su CV en chino usando CJK, \clearpage es requerido por fancyhdr para que funcione correctamente con CJK, aunque esto eliminara la numeracion de pagina al dejar \lastpage como no definido
+\pagebreak
 \section{International research stays}
 \cvlistitem{Research stay from 1/10/2014 to 1/4/2015 (six months) at the Structural Impact Laboratory (NTNU, Norway) supervised by Prof. Magnus Langseth and Dr. David Morin.}
 
@@ -178,7 +187,7 @@
 \cvlistitem{Chairman in ECCOMAS 2022, member of the organizing committee in ICILSM 2022.}
 \cvlistitem{Reviewer in JCR journals \emph{Journal of the Mechanics and Physics of Solids}, \emph{Engineering Fracture Mechanics}, \emph{European Journal of Mechanics A/Solids}, \emph{International Journal of Impact Engineering}, \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites}, \emph{Engineering Optimization}, \emph{Computers and Structures}, \emph{Composites Part B}, \emph{Journal of Aerospace Engineering}, and \emph{Thin-Walled Structures}.}
 \cvlistitem{External advisor, Group of Structural Mechanics, University of A Coruña.}
-\cvlistitem{Opponent in PhD thesis committees at: The University of Edinburgh (2019). }
+\cvlistitem{Opponent in PhD thesis committees at: The University of Edinburgh (2019), Mondragón University (2024). }
 
 \section{Other information}
 \cvlistitem{Driving license. Car owner.}
