--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -5,12 +5,41 @@
         journal={},
 }
 
+@article{marcos,
+title = "{Numerical study on the effects of alloying variations on the crushing behaviour of an aluminium profile}",
+journal = "Thin-Walled Structures",
+year = "Accepted for publication",
+author = "M. Fern\'andez and M. Costas and O.S. Hopperstad and D. Morin",
+}
+
+@article{daniele1,
+title = "{Testing and modelling of aluminium cans for prismatic lithium-ion cells under crash loading}",
+journal = "International Journal of Impact Engineering",
+pages = {105029},
+year = "2024",
+author = "D. Cioni and D. Morin and A. Strating and S. Kizio and M. Langseth and M. Costas",
+}
+
+@article{debora1,
+title = "{Quasi-static and dynamic shear-out resistance in a steel fin-plate connection: An experimental and numerical investigation}",
+journal = "International Journal of Impact Engineering",
+year = "2024",
+author = "D. Obkircher and M. Costas and M. Langseth and D. Morin",
+}
+
+@article{victor3,
+title = "{A Virtual Calibration Strategy and Its Validation for Large-Scale Models of Multi-Sheet Self-Piercing Rivet Connections}",
+journal = "SAE International Journal of Materials and Manufacturing",
+volume = {13},
+year = "2024",
+author = "V. Andr\'e and M. Costas and M. Langseth and D. Morin",
+}
+
 @article{victor2,
 title = "{Behavior and large-scale modeling of multi-sheet aluminum connections with self-piercing rivets}",
 journal = "Journal of Manufacturing Science and Engineering",
 volume = {145},
-pages = {101010},
-year = "2023",
+year = "2024",
 author = "V. Andr\'e and M. Costas and M. Langseth and D. Morin",
 }
 
@@ -36,7 +65,7 @@ journal = {Journal of Materials Processing Technology},
 volume = {294},
 pages = {117133},
 year = {2021},
-author = {Costas, M and Morin, D. and Sønstabø, JK. and Langseth, M.},
+author = {Miguel Costas and David Morin and Johan Kolstø Sønstabø and Magnus Langseth},
 }
 
 @article{JOHANNESSEN2021106673,
@@ -45,7 +74,7 @@ journal = {Journal of Constructional Steel Research},
 volume = {182},
 pages = {106673},
 year = {2021},
-author = {Johannessen, J. and Johannessen, OH. and Costas, M. and Clausen, AH. and Sønstabø, JK.},
+author = {H. Johannessen and O. Hestetræet Johannessen and M. Costas and A.H. Clausen and J.K. Sønstabø},
 }
 
 @Article{app10238510,
@@ -206,30 +235,46 @@ isbn="978-3-662-53605-6",
 
 }
 
-@conference{maisie1,
-  Author = {Edwards-Mowforth, M. and Costas, M. and Kristoffersen, M. and Teixeira-Dias, F. and Børvik, T.},
-  Booktitle = {BSSM 17th International Conference on Advances in Experimental Mechanics, Glasgow (UK)},
+@conference{dymat24,
+  Author = {Cioni, D. and Morin, D. and Strating, A. and Kizio, S. and Langseth, M. and Costas, M.},
+  Booktitle = {DYMAT conference 2024, Zürich (Switzerland)},
+  Document_Type = {Conference Paper},
+  Title = {Testing and modelling of aluminium cans for prismatic lithium-ion cells under crash loading},
+  Year = {2024},
+  }
+  
+ @conference{maisieaveiro,
+  Author = {Edwards-Mowforth, M. and Costas, M. and Teixeira-Dias, F. and Børvik, T. Kristoffersen, M.},
+  Booktitle = {Congress on Numerical Methods in Engineering 2024, Aveiro (Portugal)},
+  Document_Type = {Conference Paper},
+  Title = {Numerical modelling of fragmentation in armour piercing bullet cores.},
+  Year = {2024},
+  }
+
+ @conference{maisie20231,
+  Author = {Edwards-Mowforth, M. and Costas, M. and Kristoffersen, M. and Teixeira-Dias, F. and Børvik, T. Kristoffersen, M.},
+  Booktitle = {BSSM 17th International Conference on Advances in Experimental Mechanics, Glasgow (United Kingdom)},
+  Document_Type = {Conference Paper},
+  Title = {On the ballistic impact resistance of additive manufactured maraging steel targets compared to that of cast targets.},
+  Year = {2023},
+  }
+
+ @conference{maisie20232,
+  Author = {Edwards-Mowforth, M. and Costas, M. and Kristoffersen, M. and Teixeira-Dias, F. and Børvik, T. Kristoffersen, M.},
+  Booktitle = {FFI AMMA2023 - Additive Manufacturing for Military Applications 2023, Oslo (Norway)},
+  Document_Type = {Conference Paper},
+  Title = {Additively Manufactured Ballistic Protection.},
+  Year = {2023},
+  }
+
+ @conference{maisie20233,
+  Author = {Edwards-Mowforth, M. and Costas, M. and Kristoffersen, M. and Teixeira-Dias, F. and Børvik, T. Kristoffersen, M.},
+  Booktitle = {33rd International Symposium on Ballistics - ISB 2023, Bruges, (Belgium)},
   Document_Type = {Conference Paper},
   Title = {On the ballistic impact resistance of additive manufactured maraging steel targets compared to that of cast targets},
   Year = {2023},
   }
-
-@conference{maisie2,
-  Author = {Edwards-Mowforth, M. and Costas, M. and Kristoffersen, M. and Teixeira-Dias, F. and Børvik, T.},
-  Booktitle = {Additively Manufactured Ballistic Protection, FFI AMMA2023 - Additive Manufacturing for Military Applications, Oslo (Norway)},
-  Document_Type = {Conference Paper},
-  Title = {On the ballistic impact resistance of additive manufactured maraging steel targets compared to that of cast targets},
-  Year = {2023},
-  }
-
-@conference{maisie3,
-  Author = {Edwards-Mowforth, M. and Costas, M. and Kristoffersen, M. and Teixeira-Dias, F. and Børvik, T.},
-  Booktitle = {33rd International Symposium on Ballistics - ISB 2023, Bruges (Belgium)},
-  Document_Type = {Conference Paper},
-  Title = {On the ballistic impact resistance of additive manufactured maraging steel targets compared to that of cast targets},
-  Year = {2023},
-  }
-
+   
 @conference{icilsm22_1,
   Author = {Børvik, T. and Costas, M and Edwards-Mowforth, M. and Kristoffersen, M.},
   Booktitle = {ICILSM 2022, Trondheim (Norway)},
